--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "gen-docs": "all-contributors generate && doctoc README.md"
   },
   "dependencies": {
+    "install": "^0.13.0",
     "localforage": "^1.10.0",
     "lodash.debounce": "^4.0.8",
+    "npm": "^8.10.0",
     "react-fast-compare": "^2.0.1"
   },
   "peerDependencies": {
@@ -46,7 +48,6 @@
     "@types/react": "16.4.7",
     "@types/react-dom": "16.0.6"
   },
-  "optionalDependencies": {},
   "devDependencies": {
     "@types/jest": "20.0.6",
     "@types/lodash.debounce": "^4.0.3",
